lint: Apply ICIJ codestyle